--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "html5 canvas pixel animation",
   "main": "server.js",
   "scripts": {
+    "start": "node server.js",
     "lint": "eslint .",
     "test": "jest"
   },
@@ -23,5 +24,8 @@
   "devDependencies": {
     "eslint": "^8.8.0",
     "jest": "^27.5.1"
+  },
+  "dependencies": {
+    "express": "^4.17.2"
   }
 }
