--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "pixel-animation",
   "version": "1.0.0",
   "description": "html5 canvas pixel animation",
-  "main": "server.js",
+  "main": "app.js",
   "scripts": {
-    "start": "node server.js",
+    "start": "node app.js",
     "lint": "eslint .",
     "test": "jest"
   },
