--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "main": "app.js",
   "scripts": {
     "start": "node app.js",
+    "build": "browserify src/js/index.js -o dist/bundle.js",
+    "watch": "watchify src/js/index.js -o dist/bundle.js -v",
     "lint": "eslint .",
     "test": "jest"
   },
@@ -22,8 +24,10 @@
   },
   "homepage": "https://github.com/nuggsrocks/pixel-animation#readme",
   "devDependencies": {
+    "browserify": "^17.0.0",
     "eslint": "^8.8.0",
-    "jest": "^27.5.1"
+    "jest": "^27.5.1",
+    "watchify": "^4.0.0"
   },
   "dependencies": {
     "ejs": "^3.1.6",
