mock html canvas with jest

--- a/package.json
+++ b/package.json
@@ -25,8 +25,10 @@
   "homepage": "https://github.com/nuggsrocks/pixel-animation#readme",
   "devDependencies": {
     "browserify": "^17.0.0",
+    "canvas": "^2.9.0",
     "eslint": "^8.8.0",
     "jest": "^27.5.1",
+    "jest-canvas-mock": "^2.3.1",
     "watchify": "^4.0.0"
   },
   "dependencies": {
